test books controller + pagination + run and build env as dependencies + test app (context for tests)
