# pkg/api/api.openapi.yaml
@@ -10,12 +10,8 @@ paths:
     get:
       operationId: GetBooks
       parameters:
-        - name: limit
-          in: query
-          schema:
-            type: integer
-            minimum: 0
-            maximum: 200
+        - $ref: "#/components/parameters/page"
+        - $ref: "#/components/parameters/page_size"
       responses:
         "200":
           description: OK
@@ -120,6 +116,24 @@ paths:
                 required:
                   - status
 components:
+  parameters:
+    page:
+      name: page
+      in: query
+      schema:
+        type: integer
+        minimum: 1
+        default: 1
+      description: The page number to retrieve (1-indexed).
+    page_size:
+      name: page-size
+      in: query
+      schema:
+        type: integer
+        minimum: 1
+        maximum: 50 # if this changes, change "controller.DefaultPageSize" as well.
+        default: 20
+      description: The maximum number of items to return per page.
   schemas:
     Error:
       type: object
